Testing map option inside the MapViewer, creating geomerty mockup for test, adding layers in Summary for MapViewer

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -508,6 +508,10 @@ footer h2 {
 	font-size: 16px;
 }
 
+.nocolor {
+	color: transparent;
+  }
+
 /* Media Queries */
 
 @media screen and (max-width: 1360px){
