--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -607,6 +607,8 @@ footer h2 {
   }
 }
 
+.graph svg > g > g:last-child { pointer-events: none }
+
 @media screen and (max-width: 820px){
   nav {
     padding: 0 15px;
