--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -174,14 +174,14 @@ section {
   width: 425px;
   background-color: #fff;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
-    padding: 40px;
-    display: inline-block;
-    text-align: left;
-    border-radius: 15px;
-    z-index: 2;
-    position: relative;
-    margin: 0 100px 20px 7%;
+  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+  padding: 40px;
+  display: inline-block;
+  text-align: left;
+  border-radius: 15px;
+  z-index: 2;
+  position: relative;
+  margin: 0 100px 20px 7%;
 }
 
 h1 {
@@ -331,11 +331,11 @@ h1 {
   width: 0;
   box-sizing: border-box;
   overflow: scroll;
-    -webkit-animation: bounce 2s infinite 2s;
-    animation: bounce 2s infinite 2s;
-    -webkit-transition: all .2s ease-in;
-    transition: all .2s ease-in;
-    transform: scale(1)
+  -webkit-animation: bounce 2s infinite 2s;
+  animation: bounce 2s infinite 2s;
+  -webkit-transition: all .2s ease-in;
+  transition: all .2s ease-in;
+  transform: scale(1)
 }
 
 .vis {
@@ -429,7 +429,7 @@ footer h2 {
   background-color: #eeeeec;
   -webkit-flex: 3 1 60%;
           flex: 3 1 60%;
- -webkit-order: 1;
+  -webkit-order: 1;
          order: 1;
   z-index: 0;
 }
@@ -532,7 +532,6 @@ footer h2 {
 }
 
 .nogo {
-  /*opacity: .3;*/
   display: none;
 }
 
@@ -599,7 +598,7 @@ footer h2 {
   font-size: 16px;
 }
 
-.graphtitle{
+.graphtitle, .graphtitle2 {
   height: 30px;
   background-color: #5C5042;
   font-size: 12px;
@@ -612,6 +611,12 @@ footer h2 {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+}
+
+.graphtitle2 {
+  border-radius: initial;
+  padding: 10px;
+  height: auto;
 }
 
 .insidegraph {
@@ -645,16 +650,24 @@ footer h2 {
 
 .nocolor {
   color: transparent;
-  }
+}
 
- .leaflet-container {
-   box-sizing: border-box;
- }
+.leaflet-container {
+  box-sizing: border-box;
+}
 
- .smgraphtitle {
-   color: #5DB2BA;
-   font-size: 16px;
- }
+.smgraphtitle {
+  color: #5DB2BA;
+  font-size: 16px;
+}
+
+.indicator div[class*="control"] {
+  padding: 0 !important;
+  background-color: #e3e3e3;
+  border-bottom: 1px solid #EDA539 !important;
+  border-radius: 0 !important;
+  outline: none;
+}
 
 /* Media Queries */
 
