Add graph titles on indicator dash and indicator detail. Also rename function to match concern. And change style to header not overflow the width.

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -89,7 +89,7 @@ header h3 b {
 
 .sheet {
   background-color: #fff;
-  width: calc(100vw - 590px);
+  width: calc(100% - 590px);
   box-sizing: border-box;
   position: absolute;
 }
