--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -752,6 +752,35 @@ footer h2 {
     margin: 0 auto;
     padding: 30px 0 50px;
   }
+
+  .sectintresp {
+    display: block;
+    min-height: auto;
+  }
+
+  .bdresponsive {
+    position: relative;
+    display: block;
+    width: 100%;
+    border: none;
+    border-top: 1px solid #577376;
+    min-height: 600px;
+  }
+
+  .bdresponsive p {
+    width: 800px;
+  }
+
+  .sheet {
+    position: static;
+    width: 100%;
+    display: block;
+  }
+
+  .smallMap {
+    height: 300px;
+    display: block;
+  }
 }
 
 @media screen and (max-width: 1050px){
