--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -669,6 +669,21 @@ footer h2 {
   outline: none;
 }
 
+.tm_tooltip {
+  background-color: #fff;
+  padding: 10px 15px;
+  border-radius: 5px;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  font-size: 12px;
+  color: #6e6e6e;
+}
+
+.tm_tooltip b {
+  font-size: 16px;
+  font-weight: 600;
+  color: #EDA539;
+}
+
 /* Media Queries */
 
 @media screen and (max-width: 1360px){
